# simplePathTracer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
readme/: dpdx&dpdy.md
src/: MIPMAP.cpp  MIPMAP.h  aggregation.cpp  aggregation.h  application.cpp  application.h  bxdf.cpp  bxdf.h  camera.cpp  camera.h  default.h  geometry.cpp  geometry.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  mathHelper.cpp  mathHelper.h  media.cpp  media.h  medium.cpp  medium.h  pathTracer.h  pngParser.cpp  pngParser.h  ray.cpp  ray.h  sampling.cpp  sampling.h  scene.cpp  scene.h  texture.cpp  texture.h
src/bxdf/: bsdf.cpp  bsdf.h  bsdfs.cpp  bsdfs.h
src/bxdf/bsdf/: MicrofacetReflection.cpp  MicrofacetReflection.h  fresnelSpecular.cpp  fresnelSpecular.h  lambertianReflection.cpp  lambertianReflection.h  microfacet.cpp  microfacet.h  orenNayer.cpp  orenNayer.h  specularReflection.cpp  specularReflection.h  specularTransmission.cpp  specularTransmission.h
src/geometry/: quad.cpp  quad.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
src/integrator/: directIntegrator.cpp  directIntegrator.h  pathIntegrator.cpp  pathIntegrator.h  volumePathIntegrator.cpp  volumePathIntegrator.h
test/: CMakeLists.txt
test/cornellBoxTest/: cornellBoxTest.cpp  parameterizedCornellBoxTest.cpp
test/deepCopyTest/: deepCopyTest.cpp
test/geometryTest/: geometryTest.cpp
test/lambertianTest/: lambertianTest.cpp
test/outputPngTest/: outputPngTest.cpp
test/quadTest/: quadTest.cpp
test/randomTest/: randomTest.cpp
test/rayCreateTest/: rayCreateTest.cpp
test/rayTracerCoreTest/: rayTracerCoreTest.cpp
test/sampleCoreTest/: sampleCoreTest.cpp
test/samplePointTest/: samplePointTest.cpp
test/sceneCreateTest/: sceneCreateTest.cpp
test/shadowTest/: shadowTest.cpp
test/windowsThreadApiTest/: windowsThreadApiTest.cpp
